--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <table cellspacing="20">
    <tr>
-        <td><img src="C:\Users\USER\pictures\profile-picture.html.jpg" alt=""></td>
+        <td><img src="C:\Users\USER\profile-picture.html.jpg" alt=""></td>
 <td><h1>Williams Oluwatomisin</h1>
 <p><em>Programmer</em></p>
 <p>i am a foodie and i love making my own recipe</p></td>
