Profile pictures properly link

--- a/profile-picture.html
+++ b/profile-picture.html
@@ -5,6 +5,6 @@
     <title>profile picture</title>
 </head>
 <body>
-  <td><img src="C:\Users\USER\Pictures\profile-picture.html.jpg" alt="profile picture"></td>
+  <td><img src="./images/profile-picture.jpg" alt="profile picture"></td>
 </body>
 </html>
